# image-annotation

./: main.py  pyproject.toml  readme.md  run.sh
static/: index.html
